[tool.poetry]
name = "flask-bokeh-example"
version = "0.1.0"
description = ""
authors = ["Ihsara <longchau21@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2.5"
bokeh = "^1.4.0"
pandas = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
